# hoocl

./: README.md  install.sh  main.py  pyproject.toml
cli/: __init__.py  main.py
tests/: test_cli.py
