[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hoocl"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["build>=1.5.0", "click>=8.4.0", "twine>=6.2.0"]

[project.scripts]
hoocl = "cli.main:cli"
